# ClipThat

./: .gitignore  README.md  clip_that_script.py  output.txt  requirements.txt  transcriptor.py
.github/workflows/: build.yml
web/: package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  index.css
web/src-tauri/: 2  Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs
web/src/components/: ContextMenu.jsx  GoogleAuthButton.jsx  LoadingOverlay.jsx  LoadingSpinner.jsx  LogoutButton.jsx  MenuBar.jsx  StatusBar.jsx  TitleBar.jsx  UnsubscribeButton.jsx
web/src/components/ui/: button.jsx  card.jsx  input.jsx
web/src/hooks/: useFileHook.jsx  useFolderHook.jsx  useSettingsHook.jsx  useUpdate.jsx
web/src/layout/: TabLayout.jsx
web/src/pages/: ClipVideoPage.jsx  SignInPage.jsx  SignUpPage.jsx  SubscriptionPage.jsx  VideoLibrary.jsx
web/src/widgets/: Clip.jsx  ClipsCarousel.jsx  Instructions.jsx  ProtectedRoute.jsx  Settings.jsx  SubscribeBtn.jsx
web/tests/cypress/fixtures/: clipResponse.json
web/tests/cypress/support/e2e/: clipVideoPage.cy.js
