[package]
name = "app"
version = "2.3.0"
description = "An app for making short clips out of a long video"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.3", features = ["protocol-asset"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2.0.2"
tauri-plugin-fs = { version = "2.0.0-rc", features = ["watch"] }
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
